minor password changes

--- a/public/index.html
+++ b/public/index.html
@@ -91,13 +91,13 @@
                                 <span class="input-group-text" id="inputGroup-sizing-default">Username</span>
                             </div>
                             <input name="username" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default"
-                            pattern=".{6,}" required title="6 characters minimum">
+                            pattern=".{6,}" required title="Username requires a minimum of 6 characters.">
                         </div>
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="inputGroup-sizing-default">Password</span>
                             </div>
-                            <input type="password" name="pw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                            <input type="passwordInput" class="form-control" name="pw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Password must contain an uppercase letter and a number">
                             
                         </div>
                     </div>
