Testing filepath change for login button, login => Login

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                 <input onClick="clearErrors()" id="passwordInput" type="password" name="password" placeholder="Password">
                 <p id="passwordError"></p>
                 <button type="submit" id="logInButtonLoginPage">
-                    <img id="logInButtonLoginPageImage" src="logInButtonLoginPage.png">
+                    <img id="logInButtonLoginPageImage" src="LogInButtonLoginPage.png">
                 </button>
                 <br>
             </form>
