--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link media="only screen and (max-device-width: 480px)" href="main.css" type= "text/css" rel="stylesheet">
+
 
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC" rel="stylesheet">
