added more meta and link tags

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link media="only screen and (max-device-width: 480px)" href="main.css" type= "text/css" rel="stylesheet">
 
 
@@ -26,7 +27,7 @@
 
     <!-- CUSTOM CSS & JS -->
 
-    <link href="main.css" rel="stylesheet">
+    <!-- <link href="main.css" rel="stylesheet"> -->
 
     <title>Dashboard</title>
 </head>
