took away type button from setting

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -59,7 +59,7 @@
             <div id="settingsArrowDiv">
                 <i class="fas fa-caret-right"></i>
             </div>
-            <img src="SettingsButton.png" id="settingsButtonImage" type="button">
+            <img src="SettingsButton.png" id="settingsButtonImage">
         </div>
         <div class="col-2"></div>
         <div class="col-9" id="rightColumnButtonContainer">
