--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -212,8 +212,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <img src="nextHoleButton.png" type="button" data-dismiss="modal" onClick="setStats()" class="btn">
+                <div class="modal-footer col-12" id="nextHoleButtonDiv">
+                    <div class="col-6"></div>
+                    <img src="nextHoleButton.png" id="nextHole" type="button" data-dismiss="modal" onClick="setStats()" class="col-6">
                 </div>
             </div>
         </div>
