--- a/public/scorecard.html
+++ b/public/scorecard.html
@@ -214,7 +214,7 @@
                 </div>
                 <div class="modal-footer col-12" id="nextHoleButtonDiv">
                     <div class="col-6"></div>
-                    <img src="nextHoleButton.png" id="nextHole" type="button" data-dismiss="modal" onClick="setStats()" class="col-6">
+                    <img src="nextHoleButton.png" id="nextHole" data-dismiss="modal" onClick="setStats()" class="col-6">
                 </div>
             </div>
         </div>
